Test action new version

--- a/bitnami/orangehrm/Chart.yaml
+++ b/bitnami/orangehrm/Chart.yaml
@@ -1,5 +1,5 @@
 annotations:
-  category: HumanResourceManagement
+  category: test-HumanResourceManagement
 apiVersion: v2
 appVersion: 4.7.0-0
 dependencies:
