--- a/bitnami/common/Chart.yaml
+++ b/bitnami/common/Chart.yaml
@@ -1,5 +1,5 @@
 annotations:
-  category: Infrastructure
+  category: test-Infrastructure
 apiVersion: v2
 # Please make sure that version and appVersion are always the same.
 appVersion: 1.3.3
