--- a/bitnami/ejbca/Chart.yaml
+++ b/bitnami/ejbca/Chart.yaml
@@ -1,5 +1,5 @@
 annotations:
-  category: CertificateAuthority
+  category: test-CertificateAuthority
 apiVersion: v2
 appVersion: 6.15.2-6
 dependencies:
