--- a/bitnami/metallb/templates/speaker/secret.yaml
+++ b/bitnami/metallb/templates/speaker/secret.yaml
@@ -4,7 +4,7 @@ data:
   {{ include "metallb.speaker.secretKey" . }}: {{ include "common.secrets.passwords.manage" (dict "secret" ( include "metallb.speaker.secretName" .) "key" ( include "metallb.speaker.secretKey" .) "providedValues" (list "speaker.secretValue") "length" 256 "context" $) }}
 kind: Secret
 metadata:
-  name: {{ include "metallb.speaker.secretName" . }}
+  name: {{ include "metallb.speaker.secretName" . }}-test
   labels: {{- include "common.labels.standard" . | nindent 4 }}
     app.kubernetes.io/component: speaker
     {{- if .Values.commonLabels }}
